# ezscore

./: .gitignore  LICENSE  README.md  ezscore_demo.py  pyproject.toml  setup.py
.assets/: hyp
ezscore/: hooks.py  model_utils.py
model/: .gitattributes  README.md
model/ez6/: fingerprint.pb  saved_model.pb
model/ez6/variables/: variables.index
model/ez6moe/: fingerprint.pb  keras_metadata.pb
model/ez6moe/variables/: variables.index
model/ez6rt/: fingerprint.pb  keras_metadata.pb
model/ez6rt/variables/: variables.index
model/model-weights-only/: ez6.index  ez6rt.97.index
src/ezscore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
